--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,8 +13,8 @@
     {
       "type": "chrome",
       "request": "launch",
-      "name": "對 localhost 啟動 Chrome",
-      "url": "http://localhost:8080",
+      "name": "Chrome",
+      "url": "http://localhost:5500", //和Live Server同一個port 就可以Hot Reload的同時也可以Debug
       "webRoot": "${workspaceFolder}"
     }
   ]
