--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "occthtmltest",
+  "name": "cpq",
   "version": "1.0.0",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Tom Chang",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.56.0"
